packages/beff-core/tests/snapshots/report_error__tests__fail_access_union_arr.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 6 │             get: (): B => impl()
   │                      ┬  
   │                      ╰── This type contains `never` and cannot be serialized
───╯

